k8s/proxy-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: router
spec:
  replicas: 1
  selector:
    matchLabels:
      app: router
  template:
    metadata:
      labels:
        app: router
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        volumeMounts:
        - name: router-config
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
      volumes:
      - name: router-config
        configMap:
          name: router-config
---
apiVersion: v1
kind: Service
metadata:
  name: router-service
spec:
  selector:
    app: router
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
